<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#b3e5fc"
    android:layout_height="wrap_content"
    tools:context=".QuizActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_msg"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="16sp"

        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold" />
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/roundedlayout"
            android:layout_marginTop="8dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#212121"
                />
            <RadioGroup
                android:id="@+id/an1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="A"
                android:layout_marginBottom="4dp">
                <RadioButton
                    android:id="@+id/A1"
                    android:tag="A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A1"/>
                <RadioButton
                    android:id="@+id/B1"
                    android:tag="B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/B1"/>
                <RadioButton
                    android:id="@+id/C1"
                    android:tag="C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/C1"/>
                <RadioButton
                    android:id="@+id/D1"
                    android:tag="A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/D1"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:background="@drawable/roundedlayout"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#212121"/>
            <RadioGroup
                android:id="@+id/an2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="D"
                android:layout_marginBottom="8dp">
                <RadioButton
                    android:id="@+id/A2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="A"
                    android:text="@string/A2"/>
                <RadioButton
                    android:id="@+id/B2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="B"
                    android:text="@string/B2"/>
                <RadioButton
                    android:id="@+id/C2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="C"
                    android:text="@string/C2"/>
                <RadioButton
                    android:id="@+id/D2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="D"
                    android:text="@string/D2"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:background="@drawable/roundedlayout"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q3"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#212121"/>
            <RadioGroup
                android:id="@+id/an3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="A"
                android:layout_marginBottom="8dp">
                <RadioButton
                    android:id="@+id/A3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="A"
                    android:text="@string/A3"/>
                <RadioButton
                    android:id="@+id/B3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="B"
                    android:text="@string/B3"/>
                <RadioButton
                    android:id="@+id/C3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="C"
                    android:text="@string/C3"/>
                <RadioButton
                    android:id="@+id/D3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="D"
                    android:text="@string/D3"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:background="@drawable/roundedlayout"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q4"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#212121"/>
            <RadioGroup
                android:id="@+id/an4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="C"
                android:layout_marginBottom="8dp">
                <RadioButton
                    android:id="@+id/A4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="A"
                    android:text="@string/A4"/>
                <RadioButton
                    android:id="@+id/B4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="B"
                    android:text="@string/B4"/>
                <RadioButton
                    android:id="@+id/C4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="C"
                    android:text="@string/C4"/>
                <RadioButton
                    android:id="@+id/D4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="D"
                    android:text="@string/D4"/>
            </RadioGroup>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:background="@drawable/roundedlayout"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#212121"
                android:tag="a.c"/>
            <CheckBox
                android:id="@+id/an6a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="Y"
                android:text="@string/an6a"/>
            <CheckBox
                android:id="@+id/an6b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="N"
                android:text="@string/an6b"/>
            <CheckBox
                android:id="@+id/an6c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="Y"
                android:text="@string/an6c"/>
            <CheckBox
                android:id="@+id/an6d"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="Y"
                android:text="@string/an6d"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:background="@drawable/roundedlayout"
            android:layout_marginBottom="8dp">
            <TextView
                android:id="@+id/q7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q7"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#212121"
                android:tag="JAVA"/>
            <EditText
                android:id="@+id/a7"
                android:layout_width="match_parent"
                android:inputType="text"
                android:hint="@string/a7_hint"
                android:layout_height="wrap_content" />
        </LinearLayout>





        <Button
            android:id="@+id/submit_ans"
            android:layout_width="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="#9e9e9e"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/submit_ans"
            android:onClick="submitAnswer"
           />




    </LinearLayout>
</ScrollView>
</LinearLayout>