<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b3e5fc"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#212121"
        android:text="@string/welcome_msg"
        android:textAllCaps="true"
        android:textSize="32sp"
        android:textAlignment="center"
        android:textStyle="bold"

        android:layout_gravity="center"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/quiz"
        android:contentDescription="@string/img1_desc"
        android:scaleType="centerInside"
        />

    <EditText
        android:id="@+id/uname"
        android:layout_width="match_parent"
        android:hint="@string/uname"
        android:inputType="text"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/start_btn"
        android:layout_width="match_parent"

        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="#9e9e9e"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/start_quiz"
        android:onClick="logIn"/>
</LinearLayout>
</ScrollView>